--- a/src/app/app.css
+++ b/src/app/app.css
@@ -96,13 +96,6 @@ body,
   box-shadow: 0px 2px 0px 0px #00000004;
 }
 
-.select-filter input::placeholder {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 22px;
-  text-align: left;
-}
-
 .select-filter>div {
   display: flex;
 }
@@ -157,7 +150,6 @@ body,
   flex-direction: column;
   gap: 24px;
   opacity: 50%;
-
 }
 
 .random-recipe h5 {
@@ -232,6 +224,7 @@ body,
   font-weight: 400;
   line-height: 22px;
   text-align: center;
+  cursor: pointer;
 }
 
 .pagination .active {
@@ -242,5 +235,125 @@ body,
 .pagination .disabled {
   border: 1px solid #D9D9D9;
   color: #D9D9D9;
+}
 
+
+@media (max-width: 1700px) {
+
+  .filter-area {
+    width: 30%;
+  }
+
+  .select-filter select {
+    width: 65%;
+  }
+
+  .select-filter>div {
+    width: 65%;
+  }
+
+  .list-area {
+    width: 70%;
+  }
+
+}
+
+@media (max-width: 1300px) {
+  .recipe-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+
+  .filter-area-content {
+    padding: 0;
+  }
+
+  .filters {
+    width: 100%;
+    height: fit-content;
+    gap: 24px;
+  }
+
+  .app .select-filter {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .select-filter select {
+    width: 100%;
+  }
+
+  .select-filter>div {
+    width: 100%;
+  }
+
+  .select-filter>p {
+    text-align: left;
+  }
+
+  .select-filter>div div {
+    width: 25%;
+  }
+}
+
+@media (max-width: 900px) {
+
+  .app section {
+    flex-direction: column;
+  }
+
+  .filter-area {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+  }
+
+  .filters {
+    width: 70%;
+  }
+
+  .filter-area-content div {
+    height: 250px;
+  }
+
+
+  .random-recipe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    opacity: 50%;
+  }
+
+  .list-area {
+    width: 100%;
+  }
+
+  .recipe-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  .app h1 {
+    font-size: 20px;
+  }
+
+  .recipe-list {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+  }
+
+  .pagination {
+    gap: 6px;
+  }
+
+  .pagination button {
+    width: 24px;
+    height: 24px;
+    padding: 1px 4px;
+  }
 }
