--- a/src/list-item/list-item.css
+++ b/src/list-item/list-item.css
@@ -53,6 +53,8 @@
   }
   
   .list-item-description>p:first-child {
+    height: 60%;
+    overflow: scroll;
     font-size: 10px;
     font-weight: 400;
     line-height: 11.72px;
@@ -75,4 +77,49 @@
     align-items: center;
     gap: 2px;
   }
+
   
+  @media (max-width: 1700px) {
+    .recipe-list-item {
+      height: 100%;
+    }
+    
+    
+    .list-item-title h3 {
+      height: 20%;
+      padding: 16px;
+    
+    }
+    
+    .list-item-title div {
+      width: 100%;
+      height: 70%;
+    }
+    
+    
+    .list-item-description>p:first-child {
+      height: 50%;
+    }
+
+    .list-item-description div div svg {
+      width: 30%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      gap: 2px;
+    }
+    
+  }
+
+  @media (max-width: 1400px) {
+      .list-item-description {
+        width: 50%;
+        padding: 16px 12px;
+        align-items: flex-start;
+    }
+
+    .list-item-description>div:nth-child(3) {
+      display: flex;
+      flex-direction: column;
+    }
+  }
