--- a/src/recipe-page/recipe-page.css
+++ b/src/recipe-page/recipe-page.css
@@ -24,13 +24,15 @@
 }
 
 .recipePage section {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 12px;
 }
 
-.recipePage section>div {
+.firstSection,
+.secondSection {
     width: 465px;
     height: 100%;
     display: flex;
@@ -38,18 +40,16 @@
     gap: 12px;
 }
 
-.recipePage section>div:last-child {
-    width: 942px;
-}
-
-.recipePage section>div>div {
+.firstSection>div,
+.secondSection>div {
     width: 100%;
     border-radius: 2px;
     border: 1px solid #F0F0F0;
     background-color: #FFFFFF;
 }
 
-.recipePage section>div>div>div {
+.firstSection>div>div,
+.secondSection>div>div {
     padding: 24px;
     display: flex;
     flex-direction: column;
@@ -67,21 +67,25 @@
     box-shadow: 0px -1px 0px 0px #F0F0F0 inset;
 }
 
-.recipePage section>div>div p {
+.firstSection>div p,
+.secondSection>div p {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     text-align: left;
 }
 
-.recipePage section>div>div:nth-child(4) p:last-child {
+.secondSection>div:last-child {
+    height: 724px;
+}
+
+.firstSection>div:nth-child(4) p:last-child {
     font-size: 20px;
     font-weight: 700;
     line-height: 24px;
     text-align: left;
     color: #000000D9;
 }
-
 
 .secondary {
     font-size: 14px;
@@ -91,11 +95,11 @@
     color: #00000073;
 }
 
-.recipePage section .firstSection div:last-child div {
+.firstSection div:last-child div {
     height: 208px;
 }
 
-.recipePage section .firstSection div:nth-child(5) p {
+.firstSection div:nth-child(5) p {
     font-size: 14px;
     font-weight: 400;
     line-height: 16.41px;
@@ -118,7 +122,6 @@
 }
 
 .secondSection ul {
-    height: 666px;
     padding: 24px;
     display: flex;
     flex-direction: column;
@@ -131,12 +134,134 @@
 }
 
 .thirdSection {
+    height: 100%;
+    width: 942px;
     padding: 12px;
     background-color: #FFFFFF80;
 }
 
 .thirdSection div {
     height: 100%;
+    width: 100%;
     background-position: center;
     background-size: cover;
+}
+
+@media (max-width: 1300px) {
+
+    .firstSection>div {
+        height: fit-content;
+    }
+
+    .recipePage h5 {
+        height: 70px;
+        padding: 16px;
+    }
+
+    .firstSection,
+    .secondSection {
+        width: 30%;
+    }
+
+    .secondSection>div:last-child {
+        height: 90%;
+    }
+
+    .thirdSection {
+        width: 40%;
+        height: 100%;
+        padding: 12px;
+    }
+
+    .thirdSection>div {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 900px) {
+    .recipePage section {
+        height: fit-content;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        gap: 12px;
+    }
+
+    .firstSection {
+        grid-column: 1 / 2;
+        grid-row: 1;
+        height: 100%;
+        width: 100%;
+    }
+
+    .secondSection {
+        grid-column: 2 / 3;
+        grid-row: 1;
+        height: 100%;
+        width: 100%;
+    }
+
+    .thirdSection {
+        grid-column: 1 / 3;
+        grid-row: 2;
+        height: 100%;
+        width: 100%;
+    }
+
+    .thirdSection div {
+        height: 500px;
+        width: 100%;
+    }
+
+    .recipePage section>div {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .recipePage h1 {
+        font-size: 20px;
+    }
+
+    .recipePage section {
+        height: fit-content;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
+        gap: 12px;
+    }
+
+    .firstSection {
+        grid-column: 1;
+        grid-row: 1;
+        height: 100%;
+        width: 100%;
+    }
+
+    .secondSection {
+        grid-column: 1;
+        grid-row: 2;
+        height: 100%;
+        width: 100%;
+    }
+
+    .thirdSection {
+        grid-column: 1;
+        grid-row: 3;
+        height: 100%;
+        width: 100%;
+    }
+
+    .thirdSection div {
+        height: 500px;
+        width: 100%;
+    }
+
+    .recipePage section>div {
+        width: 100%;
+        height: 100%;
+    }
 }
